--- a/css/styles.css
+++ b/css/styles.css
@@ -731,3 +731,196 @@ ul {
   height: 8px;
   fill: currentColor;
 }
+.form {
+  padding: 0 24px;
+  margin: 0;
+  width: 100%;
+}
+.form-field {
+  position: relative;
+  margin-bottom: 0;
+}
+.form-label {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.1;
+  letter-spacing: 0.01em;
+  color: #8e8f99;
+}
+
+.form-input {
+  height: 40px;
+  width: 100%;
+  margin-bottom: 8px;
+  padding: 11px 0 11px 34px;
+  border-radius: 3px;
+  border: 1px solid;
+  border-color: rgba(46, 47, 66, 0.4);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus {
+  border-color: #4d5ae5;
+}
+
+.icon {
+  position: absolute;
+  top: 50%;
+  left: 10px;
+  transform: translateY(-30%);
+  display: inline-block;
+  width: 24px;
+  height: 24px;
+  fill: currentColor;
+  color: #2e2f42;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus ~ .icon {
+  color: #4d5ae5;
+}
+
+.form-titel {
+  margin: 0;
+  padding: 72px 24px 16px;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #434455;
+}
+.Comment-field {
+  padding-bottom: 16px;
+}
+textarea {
+  resize: none;
+}
+.form-comment {
+  width: 100%;
+  height: 120px;
+  padding-top: 8px;
+  padding-left: 16px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  border-color: rgba(46, 47, 66, 0.4);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.form-comment:focus {
+  border-color: #4d5ae5;
+}
+.Comment-field textarea::placeholder {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+}
+
+.Privacy {
+  color: #4d5ae5;
+}
+
+.btn-submit {
+  height: 56px;
+  width: 169px;
+  margin: 24px 120px;
+  cursor: pointer;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  background-color: #4d5ae5;
+  color: #ffffff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn-submit:hover,
+.btn-submit:focus {
+  background-color: #404bbf;
+}
+.checkbox-wrap {
+  display: flex;
+  gap: 8px;
+  align-items: center;
+}
+.custom-checkbox {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  width: 20px;
+  height: 20px;
+  border: 2px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  color: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.custom-icon {
+  width: 15px;
+  height: 15px;
+  fill: currentColor;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox:checked + .checkbox-wrap > .custom-checkbox {
+  background-color: #404bbf;
+  border-color: transparent;
+  color: #ffffff;
+}
+/* SUBSCRIBE */
+.subscr-container {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+.subscr {
+  margin: 0 0 16px 0;
+  padding: 0;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  text-align: left;
+  color: #ffffff;
+}
+.subscr-field {
+  width: 264px;
+  height: 40px;
+  padding-left: 16px;
+  border: 1px solid #ffffff;
+  border-radius: 4px;
+  background-color: #2e2f42;
+  color: #ffffff;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+.subscr-field::placeholder {
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+}
+.subscr-icon {
+  margin-left: 16px;
+  width: 24px;
+  height: 24px;
+  fill: currentColor;
+}
+.btn-subscr {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  height: 40px;
+  width: 165px;
+  border-radius: 4px;
+  padding: 8px 24px 8px 24px;
+  background-color: #4d5ae5;
+  color: #ffffff;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn-subscr:hover,
+.btn-subscr:focus {
+  background-color: #404bbf;
+}
